@@ -3,6 +3,7 @@
 4.1.10
  - Revert JSON API version to 6.14.3
  - Show placeholder artwork if no poster/fanart available for a movie
+ - Add button to clear selected genres
 
 4.1.9
 - New project logo/fanart/favicon courtesy of
